--- a/estilos.css
+++ b/estilos.css
@@ -4,11 +4,32 @@
     font-size: 40px;
 }
 
+body {
+    background-color: rgb(0, 0, 0);
+}
+
 div {
-    width: 150px;
-    height: 150px;
-    margin: 20px;
-    border: 10px solid;
-    background-color: yellow;
-    display: inline-block;
+    margin: auto;
+    margin-top: 50px;
+    width: 320px;
+    height: 300px;
+    border: 4px solid blueviolet;
+    background-color: rgb(201, 75, 201);
+    overflow-x: auto;
+}
+
+img {
+    width: 300px;
+    position: relative;
+    top: 260px;
+    outline: 2px solid rgb(4, 0, 8);
+    transition: all 1s;
+}
+
+img:hover {
+    width: 300px;
+    position: relative;
+    top: 0px;
+    outline: 2px solid rgb(4, 0, 8);
+    overflow-y: auto;
 }
