--- a/estilos.css
+++ b/estilos.css
@@ -1,35 +1,25 @@
 * {
     font-family: 'Lobster', cursive;
     font-weight: 100;
-    font-size: 40px;
+    font-size: 20px;
+    background-color: black;
 }
 
-body {
-    background-color: rgb(0, 0, 0);
-}
-
-div {
+.cont {
     margin: auto;
     margin-top: 50px;
-    width: 320px;
-    height: 300px;
-    border: 4px solid blueviolet;
-    background-color: rgb(201, 75, 201);
-    overflow-x: auto;
+    border: 7px solid rgb(201, 75, 201);
+    background-color: blueviolet;
+    width: 50%;
+    padding: 20px
 }
 
-img {
-    width: 300px;
-    position: relative;
-    top: 260px;
-    outline: 2px solid rgb(4, 0, 8);
-    transition: all 1s;
+.cont p {
+    width: 50%;
 }
 
-img:hover {
-    width: 300px;
-    position: relative;
-    top: 0px;
-    outline: 2px solid rgb(4, 0, 8);
-    overflow-y: auto;
+.cont img {
+    float: left;
+    width: 200px;
+    margin-right: 20px;
 }
