--- a/estilos.css
+++ b/estilos.css
@@ -2,18 +2,39 @@
     font-family: 'Lobster', cursive;
     font-weight: 100;
     font-size: 20px;
-    background-color:white;
+    background-color:black;
 }
 
-.caja{
+/*colorización con ColorName*/
+
+.caja, .caja2, .caja3{
     margin: 45px;
-    width: 200px;
-    height: 300px;
+    width: 300px;
+    height: 250px;
+    padding: 20px;
     border: 5px solid blueviolet;
     background-color: pink;
     cursor: pointer;
+    display: inline-block;
 }
+
+/*colorización con RGB*/
 
 .caja:active {
     cursor: row-resize;
+    background-color: rgb(150, 0, 255);
+}
+
+/*colorización con RGBA*/
+
+.caja2:active {
+    cursor: row-resize;
+    background-color: rgba(150, 0, 0, 255);
+}
+
+/*colorización con HEX*/
+
+.caja3:active {
+    cursor: row-resize;
+    background-color: #f95;
 }
