--- a/estilos.css
+++ b/estilos.css
@@ -1,40 +1,26 @@
 * {
     font-family: 'Lobster', cursive;
     font-weight: 100;
-    font-size: 20px;
-    background-color:black;
 }
 
-/*colorización con ColorName*/
-
-.caja, .caja2, .caja3{
-    margin: 45px;
-    width: 300px;
-    height: 250px;
-    padding: 20px;
-    border: 5px solid blueviolet;
-    background-color: pink;
-    cursor: pointer;
+div {
+    width: 39%;
     display: inline-block;
+    padding: 20px;
+    background-color: #ddd;
 }
 
-/*colorización con RGB*/
-
-.caja:active {
-    cursor: row-resize;
-    background-color: rgb(150, 0, 255);
+h1, h2 {
+    font-size: 24px;
 }
 
-/*colorización con RGBA*/
-
-.caja2:active {
-    cursor: row-resize;
-    background-color: rgba(150, 0, 0, 255);
+.caja2 {
+    background-color: #bbb;
 }
 
-/*colorización con HEX*/
-
-.caja3:active {
-    cursor: row-resize;
-    background-color: #f95;
+@media only screen and (max-width: 800px) {
+    div {
+        display: block;
+        width: 100%;
+    }
 }
